FEAT: test connection to MySQL